# glycontact

./: .gitignore  404.html  ConformerLearning.ipynb  GNGNA.csv  LICENSE  NGGNA.csv  README.ipynb  README.md  SO3.csv  Thumbs.db  demo.ipynb  examples.ipynb  fail.xlsx  glycan_data.pkl  glycan_graphs.pkl  glycan_graphs_old.pkl  glycontactNotebook.ipynb  highest_flexibility.pptx  index.html  missing_in_pathway.pptx  objects.inv  process.py  process_data.ipynb  pyan.py  pyproject.toml  sitemap.xml  test.csv  tmp.txt  visualize.py  ~$missing_in_pathway.pptx
.github/workflows/: convert-notebook.yml  testing.yml
Neu5Ac(a2-3)Gal(b1-4)GlcNAc(b1-2)Man(a1-3)[Neu5Ac(a2-6)Gal(b1-4)GlcNAc(b1-2)Man(a1-6)]Man(b1-4)GlcNAc(b1-4)GlcNAc/: alpha0.cxs  alpha1.cxs  alpha2.cxs
documentation/: mkdocs.yml
documentation/docs/: examples.md  index.md  installation.md  learning.md  lwca.md  overview.md  process.md  visualize.md
documentation/site/: 404.html  index.html  objects.inv  sitemap.xml
documentation/site/examples/: index.html
documentation/site/learning/: index.html
documentation/site/lwca/: index.html
documentation/site/overview/: index.html
documentation/site/process/: index.html
documentation/site/search/: search_index.json
documentation/site/visualize/: index.html
glycontact/: 20250205_GLYCOSHAPE.json  20250516_GLYCOSHAPE.json  __init__.py  glycan_graphs.pkl  learning.py  lwca.py  process.py  visualize.py
installation/: index.html
learning/: index.html
overview/: index.html
process/: index.html
search/: search_index.json
tests/: test_functions.py
visualize/: index.html
