[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glycontact"
version = "0.1.0"
description = "A Python package for processing and analyzing glycan 3D structures"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Luc Thomes", email = "luc.thomes@univ-lille.fr"},
]
keywords = ["glycans", "bioinformatics", "structural biology", "PDB"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "plotly",
    "requests",
    "mdtraj",
    "glycowork @ git+https://github.com/BojarLab/glycowork.git@dev",
    "imageio",
    "py3Dmol",
    "tqdm"
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/lthomes/glycontact"
Repository = "https://github.com/lthomes/glycontact"
Documentation = "https://github.com/lthomes/glycontact#readme"

[tool.hatch.build.targets.wheel]
packages = ["glycontact"]

[tool.hatch.metadata]
allow-direct-references = true